Issue #3000501 by marcofernandes: Fix editor's scrollbar (dirty fix for Chrome).

--- a/css/editor.css
+++ b/css/editor.css
@@ -61,6 +61,12 @@ body .gutenberg__editor .edit-post-layout .edit-post-header {
   padding-bottom: 4px;
 }
 
+@media (min-width: 600px) {
+  .edit-post-layout__content {
+    overscroll-behavior-y: auto !important;
+  }
+}
+
 .edit-post-sidebar {
   background: #ececec !important;
 }
