--- a/css/sass/_edit-post.scss
+++ b/css/sass/_edit-post.scss
@@ -5,3 +5,10 @@
 .edit-post-layout__content {
   padding-bottom: 4px;
 }
+
+@media (min-width: 600px) {
+  .edit-post-layout__content {
+    // Dirty fix for Chrome.
+    overscroll-behavior-y: auto !important;
+  }
+}
